[package]
name = "rtchat"
version = "0.1.0"
authors = ["k.ida"]
edition = "2018"

[dependencies]
chrono            = { version="0.4.6", features = ["serde"] }
alphanumeric-sort = "1.0.6"
serde             = { version="1.0.89", features = ["derive"] }
serde_json        = "1.0.39"
futures           = "0.1.7"
postgres          = "0.15.2"
r2d2              = "0.8.3"
r2d2_postgres     = "0.14.0"
http              = "0.1.16"
websocket         = "0.22.3"
fallible-iterator = "0.1.6"
crossbeam-channel = "0.3.8"
crossbeam-utils   = "0.5.0"
